# individual_rehabilitation

./: .gitignore
backend/: api.py  database.py  main.py  pyproject.toml  schema.py
backend/data/: QnA.csv  my_history.docx
backend/input_service/: aebt_info.py  asset_info.py  basic_info.py  income_info.py
backend/project_kwon/: build_vectordb.py  generate_answer.py  requirements.txt  search_test.py
frontend/: .gitignore  vite.config.js
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/ChatBot/: ChatBot.css  ChatBot.jsx
