[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # --- MCP core ---
    "mcp[cli]>=1.27,<2",
    "fastmcp>=2.12,<3",
    "httpx>=0.28",
    # --- LangChain / LangGraph ---
    "langchain>=1.3.14",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.4.0",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=1.2.9",
    "langchain-community>=0.4.2",
    "langchain-pinecone>=0.2.13",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pinecone>=5.0.0",
    "ipykernel>=6.29.5",
    # --- Server ---
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    # --- DB ---
    "oracledb>=4.0.1",
    "sqlalchemy>=2.0.51",
    # --- Misc ---
    "python-jose[cryptography]>=3.4.0",
    "python-dotenv>=1.1.0",
    "google-api-python-client>=2.198.0",
    "wikipedia>=1.4.0",
    "aiosqlite>=0.22.1",
    "gradio>=6.20.0",
    "docx2txt>=0.9",
    "chromadb>=1.5.9",
    "sentence-transformers>=5.6.1",
    "pandas>=3.0.3",
    "openai>=2.46.0",
]
